--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@orbs-network/ton-access": "^2.3.3",
     "@ton-community/func-js": "^0.1.5",
     "bn.js": "^5.2.1",
+    "dotenv": "^16.4.5",
     "qrcode-terminal": "^0.12.0",
     "ton": "^12.1.3",
     "ton-contract-executor": "^0.5.2",
